# src

manipulator/: mavi.urdf  model.config  model.sdf
mavi/: CMakeLists.txt  package.xml
mavi/launch/: display.launch  gazebo_world.launch
mavi/robots/: mavi.urdf  model.sdf
mavi/rviz/: urdf.rviz
mavi_control/: CMakeLists.txt  package.xml
mavi_control/config/: mavi_control.yaml
mavi_control/launch/: mavi_control.launch
mavi_moveit/: CMakeLists.txt  package.xml
mavi_moveit/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  mavi.srdf  ompl_planning.yaml
mavi_moveit/launch/: default_warehouse_db.launch  demo.launch  demo_planning_execution.launch  fake_moveit_controller_manager.launch.xml  mavi_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
pysdf/src/pysdf/: parse.py
